<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_vertical_login"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginTop="40sp"
        android:hint="@string/email_hint"
        android:inputType="textWebEmailAddress"
        />

    <EditText
        android:id="@+id/et_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:hint="@string/paswd_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_button_text"
        android:layout_gravity="center"
        android:layout_marginTop="60sp"
        android:background="@color/color_bt_login"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@color/color_bt_signup"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/bt_invited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_as_a_guest"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@color/yellow"
        android:textColor="@color/white"
        android:padding="6sp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/bt_sign_in_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        />

    <Button
        android:id="@+id/bt_forgot_pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pswd"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:textSize="12sp"
        android:padding="8sp"
        android:textAllCaps="false"
        android:background="@color/white"
        android:textColor="@color/color_bt_login"/>

</LinearLayout>


