<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_vertical_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">


    <EditText
        android:id="@+id/et_mail_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:hint="@string/email_hint"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/et_paswd_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:hint="@string/paswd_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_sign_up_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:background="@color/color_bt_signup"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/white" />


</LinearLayout>